--- a/website/apps/alibrary/templates/alibrary/artist/list_item_l.html
+++ b/website/apps/alibrary/templates/alibrary/artist/list_item_l.html
@@ -1,4 +1,4 @@
-{% load thumbnail i18n truncate display_tags arating_tags spurl %}
+{% load thumbnail i18n truncate display_tags arating_tags spurl adv_cache hash_tags %}
 
 <div class="list_body_row selectable clickable item artist view edit stream collect download" id="list_item_{{ item.pk }}"
      data-resource_uri="{{ item.get_api_url }}"
@@ -37,7 +37,10 @@
                         <a href="{{ item.get_absolute_url }}" title="{{ item.name }}">
                             {{ item.name|truncate_chars_inner:24 }}
                             {% if item.country %}({{ item.country.iso2_code }}){% endif %}
-                            {% topflop_for_object item %} </a>
+                            {% cache 3600 "topflop_artist" item.pk %}
+                            {% topflop_for_object item %}
+                            {% endcache %}
+                        </a>
                     </li>
 
                     <li>
