--- a/website/apps/alibrary/templates/alibrary/artist/list_item_s.html
+++ b/website/apps/alibrary/templates/alibrary/artist/list_item_s.html
@@ -1,4 +1,4 @@
-{% load thumbnail i18n truncate display_tags arating_tags spurl alibrary_tags %}
+{% load adv_cache thumbnail i18n truncate display_tags arating_tags spurl alibrary_tags %}
 
 <!-- list item s -->
 
@@ -15,7 +15,10 @@
 				<a href="{{ item.get_absolute_url }}" title="{{ item.name }}">
 				{{ item.name|truncate_chars_inner:24 }}
 				{% if item.country %}({{ item.country.iso2_code }}){% endif %}
-				{% topflop_for_object item %} </a>
+                {% cache 3600 "topflop_artist" item.pk %}
+                {% topflop_for_object item %}
+                {% endcache %}
+                </a>
 			</li>
 
 			<li>
