--- a/website/apps/alibrary/templates/alibrary/label/list_item_m.html
+++ b/website/apps/alibrary/templates/alibrary/label/list_item_m.html
@@ -1,4 +1,4 @@
-{% load thumbnail i18n truncate display_tags arating_tags spurl alibrary_tags %}
+{% load adv_cache thumbnail i18n truncate display_tags arating_tags spurl alibrary_tags %}
 
 <div class="list_body_row selectable item label {{ item.uuid }} {% if item.creator == user %} owner{% endif %}"
      id="list_item_{{ item.pk }}"
@@ -21,7 +21,10 @@
                 <a href="{{ item.get_absolute_url }}" title="{{ item.name }}">
                     {{ item.name|truncate_chars_inner:24 }}
                     {% if item.country %}<small> {{ item.country }}</small>{% endif %}
-                    {% topflop_for_object item %} </a>
+                    {% cache 3600 "topflop_label" item.pk item.updated %}
+                    {% topflop_for_object item %}
+                    {% endcache %}
+                </a>
             </li>
 
             <li>
