--- a/website/apps/alibrary/templates/alibrary/media/sidebar/_list.html
+++ b/website/apps/alibrary/templates/alibrary/media/sidebar/_list.html
@@ -1,8 +1,11 @@
-{% load spurl %}
+{% load spurl adv_cache %}
 
 {% include "alibrary/media/sidebar/context/_list.html" %}
 {% include "alibrary/element/sidebar/_ordering.html" %}
+
+{% cache 600 "list_filter" request.get_full_path %}
 {% include "alibrary/media/sidebar/_filter.html" %}
+{% endcache %}
 
 
 {% if user.is_authenticated %}
