--- a/website/apps/alibrary/templates/alibrary/media_list.html
+++ b/website/apps/alibrary/templates/alibrary/media_list.html
@@ -1,5 +1,5 @@
 {% extends "layout_base.html" %}
-{% load spurl adv_cache i18n truncate cache dajaxice_templatetags sekizai_tags %}
+{% load spurl adv_cache hash_tags i18n truncate cache dajaxice_templatetags sekizai_tags %}
 
 {% block heading %}
     <!-- view specific scripts -->
@@ -121,12 +121,14 @@
 
         <div class="list_body">
 
+            {% hash_user_groups request.user as group_hash %}
+
             {% for item in object_list %}
 
                 {# switching list styles #}
                 {% if list_style == "s" %}
 
-                    {% cache 0 "media_list_item_s" item.pk item.updated user.is_authenticated %}
+                    {% cache 600 "media_list_item_s" item.pk item.updated group_hash %}
                     {% include "alibrary/media/list_item_s.html" %}
                     {% endcache %}
 
