--- a/website/apps/alibrary/templates/alibrary/release/list_item_s.html
+++ b/website/apps/alibrary/templates/alibrary/release/list_item_s.html
@@ -1,4 +1,4 @@
-{% load thumbnail i18n truncate display_tags arating_tags spacify_tags spurl guardian_tags %}
+{% load adv_cache thumbnail i18n truncate display_tags arating_tags spacify_tags spurl guardian_tags %}
 
 <div class="list_body_row selectable item release {{ item.uuid }} {% if item.creator == user %} owner{% endif %}"
      id="list_item_{{ item.pk }}"
@@ -23,7 +23,9 @@
                 <a href="{{ item.get_absolute_url }}" title="{{ item.name }}">
                     {{ item.name|truncate_chars_inner:24 }}
                     {% if item.release_country %}({{ item.release_country.iso2_code }}){% endif %}
+                    {% cache 3600 "topflop_release" item.pk item.updated %}
                     {% topflop_for_object item %}
+                    {% endcache %}
                 </a>
             </li>
             <li>
