--- a/website/apps/alibrary/templates/alibrary/release_list.html
+++ b/website/apps/alibrary/templates/alibrary/release_list.html
@@ -1,5 +1,7 @@
 {% extends "layout_base.html" %}
-{% load spurl adv_cache i18n truncate dajaxice_templatetags sekizai_tags webdesign %}
+{% load spurl adv_cache hash_tags i18n truncate dajaxice_templatetags sekizai_tags webdesign %}
+
+
 
 {% block heading %}
     <!-- view specific scripts -->
@@ -102,11 +104,16 @@
 
 {% block inner %}
 
+
     <div class="listhead">
 
         <div class="pagination-holder">
             {% include "element/_pagination.html" %}
         </div>
+
+
+
+
 
         <div class="wrapper list_style">
 
@@ -172,11 +179,13 @@
 
         <div class="list_body">
 
+            {% hash_user_groups request.user as group_hash %}
+
             {% for item in object_list %}
 
                 {# switching list styles #}
                 {% if list_style == "s" %}
-                    {% cache 0 "release_list_item_s" item.pk item.updated user.is_authenticated %}
+                    {% cache 600 "release_list_item_s" item.pk item.updated group_hash %}
                     {% include "alibrary/release/list_item_s.html" %}
                     {% endcache %}
                 {% endif %}
@@ -186,8 +195,9 @@
                 {% endif %}
 
                 {% if list_style == "l" %}
-                    {% cache 0 "release_list_item_l" item.pk item.updated user.is_authenticated %}{% endcache %}
+                    {% cache 600 "release_list_item_l" item.pk item.updated group_hash %}
                     {% include "alibrary/release/list_item_l.html" %}
+                    {% endcache %}
                 {% endif %}
 
             {% endfor %}
@@ -238,6 +248,8 @@
 {% endblock %}
 
 {% block sidebar %}
+
     {% include "alibrary/release/sidebar/_list.html" %}
+
 {% endblock %}
 
