--- a/website/templates/skeleton/footer_new.html
+++ b/website/templates/skeleton/footer_new.html
@@ -1,4 +1,6 @@
-{% load cms_tags menu_tags %}
+{% load cms_tags menu_tags adv_cache %}
+
+{% cache 600 "footer" request.get_full_path %}
 <div class="container">
 
 
@@ -87,3 +89,4 @@
 
 
 </div>
+{% endcache %}
