heavy bug-fixing. resolved nearly all open issues!!

--- a/website/apps/alibrary/templates/alibrary/media/_list_item_xs.html
+++ b/website/apps/alibrary/templates/alibrary/media/_list_item_xs.html
@@ -74,7 +74,9 @@
             {% for ea in item.extraartist_media.all %}
                 <li>
                     <a href="{{ ea.artist.get_absolute_url }}">{{ ea.artist.name }}</a>
+                    {% if ea.profession.name %}
                     <small>[{{ ea.profession.name }}]</small>
+                    {% endif %}
                 </li>
             {% endfor %}
 
