--- a/website/apps/importer/templates/importer/import_form_pushy.html
+++ b/website/apps/importer/templates/importer/import_form_pushy.html
@@ -200,7 +200,7 @@ $(document).ready(function() {
 <section class="importer-importfiles">
 
 	<div class="page-header">
-		<h2>Review <small>your uplads and confirm additions</small></h2>
+		<h2>Review <small>your uploads and confirm additions</small></h2>
 	</div>
 
 	<div class="listing">
