--- a/website/apps/alibrary/templates/alibrary/media_detail.html
+++ b/website/apps/alibrary/templates/alibrary/media_detail.html
@@ -172,7 +172,9 @@
                 {% for ea in object.extraartist_media.all %}
                     <li>
                         <a href="{{ ea.artist.get_absolute_url }}">{{ ea.artist.name }}</a>
+                        {% if ea.profession.name %}
                         <small>[{{ ea.profession.name }}]</small>
+                        {% endif %}
                     </li>
                 {% endfor %}
             </ul>
