--- a/website/site-static/sass/apps/scheduler.sass
+++ b/website/site-static/sass/apps/scheduler.sass
@@ -601,6 +601,9 @@ input.autocomplete
 .tg-time-pri, .tg-time-sec
   border-bottom: 1px solid #a9a9a9
   padding-right: 4px
+  span
+    color: #999
+    line-height: 24px
 
 .tg-time-pri-last, .tg-time-sec-last, .tg-times-start-last, .tg-times-end-last
   border-bottom: none
@@ -727,3 +730,16 @@ input.autocomplete
 
 
 
+// tooltips
+.qtip-daypart-hint
+  padding: 10px !important
+  h4
+    margin-bottom: 10px
+
+  .info
+
+    p
+      color: white
+    span
+      padding-left: 10px
+      color: #999
